@@ -27,3 +27,5 @@ AC_SUBST(GIMP)
 AC_SUBST(GIMPTOOL)
 AC_SUBST(GIMP_CFLAGS)
 AC_SUBST(GIMP_LIBS)
+
+
